issue contrast titels fix

--- a/css/style.css
+++ b/css/style.css
@@ -106,7 +106,7 @@ h2 {
   text-transform: uppercase;
   font-size: 1.25em;
   font-weight: bold;
-  color: #947eb0;
+  color: #ad97c9;
 }
 
 h2::after {
